src/test/deca/context/invalid/created/unary_exp/not_int.deca
// Description :
//    test test not avec int
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 10: (3.37) Type opérande : float , attendu : boolean pour l’opérateur !

{
boolean a = !3;
}